fix overlapping

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body{
 	font-family: "Poppins", sans-serif;
 	font-size: 1.2rem;
 	color: var(--body-color);
-	background-color: var(--background-color);
+	/* background-color: var(--background-color); */
+	background-color: #e3e3e3;
 	transition: color 0.25s, background-color 0.25s;
 }
 .top{
@@ -75,10 +76,10 @@ body{
 	 /* padding: 20px 100px; */
 	 background:rgba(255,255,255, .1) ;
 	 backdrop-filter: blur(15px);
+	 z-index: 999;
 }
 .header::before{
 	padding: 0px 20px;
-
 	content: '';
 	position: absolute;
     top: 0;
@@ -88,7 +89,7 @@ body{
     background: linear-gradient(90deg,transparent,rgba(255,255,255,.3),transparent);
 }
 .navbar-brand{
-	color: #fff;
+	color: #bab8b886;
 	text-decoration: none;
 	font-size: 37px;
 	font-weight: 900;
@@ -173,3 +174,5 @@ body{
 		flex-direction: column;
 	}
 }
+
+/* =================== */
